syntax = "proto3";

package rpccmdservice;

import "default.proto";


message SSServerReq{
    int32 op = 1;
    int32 nationality=2;
    bool local=3;
    string ip=4;
    string nbsaddr=5;
}


service SSServerService {
    rpc SSServerDo (SSServerReq) returns (DefaultResp) {}
}
